--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vx/axis": "0.0.184",
+    "@vx/gradient": "0.0.183",
+    "@vx/group": "0.0.183",
+    "@vx/mock-data": "0.0.185",
+    "@vx/scale": "0.0.182",
+    "@vx/shape": "0.0.184",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.3.1",
+    "inspector": "^0.5.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
